Bug 1308388. P1 - use the 'once' handler. r=kaku
MozReview-Commit-ID: K0Mg8iZKcqn

UltraBlame original commit: b2e212bc23b082504162621055add7e90c8c0ddf

--- a/dom/media/test/test_buffered.html
+++ b/dom/media/test/test_buffered.html
@@ -241,16 +241,6 @@ e
 .
 target
 ;
-v
-.
-removeEventListener
-(
-'
-timeupdate
-'
-testBuffered
-)
-;
 /
 /
 The
@@ -877,6 +867,11 @@ addEventListener
 timeupdate
 "
 testBuffered
+{
+once
+:
+true
+}
 )
 ;
 document
