Bug 1308388. P3 - add some logs. r=kaku
MozReview-Commit-ID: 1G8ZPHRMhTV

UltraBlame original commit: 2b6d9c6f07b842c94050baa44fd566bde2739595

--- a/dom/media/test/test_buffered.html
+++ b/dom/media/test/test_buffered.html
@@ -684,6 +684,24 @@ status
 206
 )
 {
+ok
+(
+true
+{
+url
+}
+:
+Fetch
+succeeded
+status
+=
+{
+xhr
+.
+status
+}
+)
+;
 /
 /
 Request
@@ -731,18 +749,21 @@ else
 ok
 (
 false
-"
+{
+url
+}
+:
 Fetch
 failed
 headers
 =
-"
-+
+{
 xhr
 .
 getAllResponseHeaders
 (
 )
+}
 )
 ;
 }
