--- a/dom/animation/test/chrome/test_animation_properties.html
+++ b/dom/animation/test/chrome/test_animation_properties.html
@@ -8646,7 +8646,7 @@ valueFormat
 0
 undefined
 '
-add
+replace
 '
 '
 linear
@@ -8680,7 +8680,7 @@ valueFormat
 0
 undefined
 '
-add
+replace
 '
 '
 linear
@@ -8714,7 +8714,7 @@ valueFormat
 0
 undefined
 '
-add
+replace
 '
 '
 linear
@@ -8748,7 +8748,7 @@ valueFormat
 0
 undefined
 '
-add
+replace
 '
 '
 linear
@@ -8847,7 +8847,7 @@ valueFormat
 0
 undefined
 '
-add
+replace
 '
 '
 linear
@@ -8908,7 +8908,7 @@ valueFormat
 0
 undefined
 '
-add
+replace
 '
 '
 linear
@@ -8969,7 +8969,7 @@ valueFormat
 0
 undefined
 '
-add
+replace
 '
 '
 linear
@@ -9030,7 +9030,7 @@ valueFormat
 0
 undefined
 '
-add
+replace
 '
 '
 linear
@@ -9133,7 +9133,7 @@ valueFormat
 1
 undefined
 '
-add
+replace
 '
 )
 ]
@@ -9167,7 +9167,7 @@ valueFormat
 1
 undefined
 '
-add
+replace
 '
 )
 ]
@@ -9201,7 +9201,7 @@ valueFormat
 1
 undefined
 '
-add
+replace
 '
 )
 ]
@@ -9235,7 +9235,7 @@ valueFormat
 1
 undefined
 '
-add
+replace
 '
 )
 ]
@@ -9361,7 +9361,7 @@ valueFormat
 1
 undefined
 '
-add
+replace
 '
 )
 ]
@@ -9422,7 +9422,7 @@ valueFormat
 1
 undefined
 '
-add
+replace
 '
 )
 ]
@@ -9483,7 +9483,7 @@ valueFormat
 1
 undefined
 '
-add
+replace
 '
 )
 ]
@@ -9544,7 +9544,7 @@ valueFormat
 1
 undefined
 '
-add
+replace
 '
 )
 ]
@@ -9742,7 +9742,7 @@ valueFormat
 1
 undefined
 '
-add
+replace
 '
 )
 ]
@@ -9840,7 +9840,7 @@ valueFormat
 0
 undefined
 '
-add
+replace
 '
 '
 linear
@@ -9874,7 +9874,7 @@ valueFormat
 0
 undefined
 '
-add
+replace
 '
 '
 linear
@@ -9908,7 +9908,7 @@ valueFormat
 0
 undefined
 '
-add
+replace
 '
 '
 linear
@@ -9942,7 +9942,7 @@ valueFormat
 0
 undefined
 '
-add
+replace
 '
 '
 linear
@@ -10066,7 +10066,7 @@ valueFormat
 1
 undefined
 '
-add
+replace
 '
 )
 ]
@@ -10100,7 +10100,7 @@ valueFormat
 1
 undefined
 '
-add
+replace
 '
 )
 ]
@@ -10134,7 +10134,7 @@ valueFormat
 1
 undefined
 '
-add
+replace
 '
 )
 ]
@@ -10168,7 +10168,7 @@ valueFormat
 1
 undefined
 '
-add
+replace
 '
 )
 ]
@@ -10222,7 +10222,7 @@ valueFormat
 0
 undefined
 '
-add
+replace
 '
 '
 linear
@@ -10248,7 +10248,7 @@ valueFormat
 1
 undefined
 '
-add
+replace
 '
 )
 ]
@@ -10363,7 +10363,7 @@ valueFormat
 0
 undefined
 '
-add
+replace
 '
 '
 linear
@@ -10389,7 +10389,7 @@ valueFormat
 1
 undefined
 '
-add
+replace
 '
 )
 ]
@@ -10546,7 +10546,7 @@ valueFormat
 1
 undefined
 '
-add
+replace
 '
 )
 ]
@@ -10679,7 +10679,7 @@ valueFormat
 0
 undefined
 '
-add
+replace
 '
 '
 linear
