Bug 1248340 - Part 8: Add tests for transformed-progress and input progress outside [0, 1]. r=birtles
MozReview-Commit-ID: 4t3fx3Adkhj

UltraBlame original commit: a639a6afd1df1973f3cc6d1b02211d741d76a53f

--- a/testing/web-platform/tests/web-animations/timing-model/time-transformations/transformed-progress.html
+++ b/testing/web-platform/tests/web-animations/timing-model/time-transformations/transformed-progress.html
@@ -325,8 +325,15 @@ of
 step
 timing
 functions
+and
+/
+/
+frames
+timing
+functions
+.
 var
-gStepTimingFunctionTests
+gStepAndFramesTimingFunctionTests
 =
 [
 {
@@ -1604,9 +1611,187 @@ progress
 }
 ]
 }
+{
+description
+:
+'
+Test
+bounds
+point
+of
+frames
+easing
+'
+effect
+:
+{
+delay
+:
+1000
+duration
+:
+1000
+fill
+:
+'
+both
+'
+easing
+:
+'
+frames
+(
+2
+)
+'
+}
+conditions
+:
+[
+{
+currentTime
+:
+0
+progress
+:
+0
+}
+{
+currentTime
+:
+1000
+progress
+:
+0
+}
+{
+currentTime
+:
+1499
+progress
+:
+0
+}
+{
+currentTime
+:
+1500
+progress
+:
+1
+}
+{
+currentTime
+:
+2000
+progress
+:
+1
+}
+]
+}
+{
+description
+:
+'
+Test
+bounds
+point
+of
+frames
+easing
+'
++
+'
+with
+iterationStart
+and
+delay
+'
+effect
+:
+{
+delay
+:
+1000
+duration
+:
+1000
+fill
+:
+'
+both
+'
+iterationStart
+:
+0
+.
+5
+easing
+:
+'
+frames
+(
+2
+)
+'
+}
+conditions
+:
+[
+{
+currentTime
+:
+0
+progress
+:
+1
+}
+{
+currentTime
+:
+1000
+progress
+:
+1
+}
+{
+currentTime
+:
+1499
+progress
+:
+1
+}
+{
+currentTime
+:
+1500
+progress
+:
+0
+}
+{
+currentTime
+:
+1999
+progress
+:
+0
+}
+{
+currentTime
+:
+2000
+progress
+:
+1
+}
+]
+}
 ]
 ;
-gStepTimingFunctionTests
+gStepAndFramesTimingFunctionTests
 .
 forEach
 (
