Bug 1344443.  Fix [[SetPrototypeOf]] on cross-origin objects to follow the spec.  r=bholley,waldo
MozReview-Commit-ID: JI9fbQTS0PS

UltraBlame original commit: 3b047199208b56db1839c0e0deffbc40b78d3cff

--- a/testing/web-platform/tests/html/browsers/origin/cross-origin-objects/cross-origin-objects.html
+++ b/testing/web-platform/tests/html/browsers/origin/cross-origin-objects/cross-origin-objects.html
@@ -1773,6 +1773,62 @@ Location
 }
 )
 ;
+if
+(
+Reflect
+.
+setPrototypeOf
+)
+{
+assert_false
+(
+Reflect
+.
+setPrototypeOf
+(
+C
+new
+Object
+(
+)
+)
+"
+Reflect
+.
+setPrototypeOf
+on
+cross
+-
+origin
+Window
+"
+)
+;
+assert_false
+(
+Reflect
+.
+setPrototypeOf
+(
+C
+new
+Object
+(
+)
+)
+"
+Reflect
+.
+setPrototypeOf
+on
+cross
+-
+origin
+Location
+"
+)
+;
+}
 }
 "
 [
@@ -1781,7 +1837,8 @@ SetPrototypeOf
 ]
 ]
 should
-throw
+return
+false
 "
 )
 ;
