Bug 1337392 - Update test cases to match new cursor behavior. r=smaug
MozReview-Commit-ID: 4BdZyeqTBAx

UltraBlame original commit: cce6ce016dfa75e6fd0a90a9e5934417a04feed0

--- a/accessible/tests/mochitest/states/test_inputs.html
+++ b/accessible/tests/mochitest/states/test_inputs.html
@@ -1305,6 +1305,22 @@ focus
 (
 )
 ;
+mininp
+.
+setSelectionRange
+(
+mininp
+.
+value
+.
+length
+mininp
+.
+value
+.
+length
+)
+;
 synthesizeKey
 (
 "
