--- a/dom/html/test/test_bug613019.html
+++ b/dom/html/test/test_bug613019.html
@@ -360,6 +360,21 @@ tooLong
 ;
 elem
 .
+setSelectionRange
+(
+elem
+.
+value
+.
+length
+elem
+.
+value
+.
+length
+)
+elem
+.
 focus
 (
 )
@@ -546,6 +561,21 @@ tooShort
 "
 )
 ;
+elem
+.
+setSelectionRange
+(
+elem
+.
+value
+.
+length
+elem
+.
+value
+.
+length
+)
 elem
 .
 focus
