--- a/editor/libeditor/tests/test_bug850043.html
+++ b/editor/libeditor/tests/test_bug850043.html
@@ -354,6 +354,22 @@ textarea
 ;
 element
 .
+setSelectionRange
+(
+element
+.
+value
+.
+length
+element
+.
+value
+.
+length
+)
+;
+element
+.
 focus
 (
 )
