Bug 1213767 - Rule-view class toggle panel. r=jdescottes
MozReview-Commit-ID: 2roKEm6Jr26

UltraBlame original commit: a668191115832fb8edabe55f1370ebea8dffb0ac

--- a/devtools/client/inspector/inspector.xhtml
+++ b/devtools/client/inspector/inspector.xhtml
@@ -1507,6 +1507,44 @@ button
 button
 >
 <
+button
+id
+=
+"
+class
+-
+panel
+-
+toggle
+"
+data
+-
+localization
+=
+"
+title
+=
+inspector
+.
+classPanel
+.
+toggleClass
+.
+tooltip
+"
+class
+=
+"
+devtools
+-
+button
+"
+>
+<
+/
+button
+>
+<
 /
 div
 >
@@ -1522,6 +1560,15 @@ id
 pseudo
 -
 class
+-
+panel
+"
+class
+=
+"
+ruleview
+-
+reveal
 -
 panel
 "
@@ -1647,6 +1694,36 @@ focus
 <
 /
 label
+>
+<
+/
+div
+>
+<
+div
+id
+=
+"
+ruleview
+-
+class
+-
+panel
+"
+class
+=
+"
+ruleview
+-
+reveal
+-
+panel
+"
+hidden
+=
+"
+true
+"
 >
 <
 /
