Bug 1345301 - elt.firstChild.remove() doesn't trigger a DOMSubtreeModified event, r=ms2ger
UltraBlame original commit: ec3adc50935dfca4d08fff5d0515a085d9430017

--- a/dom/events/test/test_bug288392.html
+++ b/dom/events/test/test_bug288392.html
@@ -503,6 +503,44 @@ event
 "
 )
 ;
+subtree
+.
+innerHTML
+=
+s
+;
+subtreeModifiedCount
+=
+0
+;
+subtree
+.
+firstChild
+.
+firstChild
+.
+remove
+(
+)
+;
+is
+(
+subtreeModifiedCount
+1
+"
+Removing
+a
+child
+node
+should
+have
+dispatched
+a
+DOMSubtreeModified
+event
+"
+)
+;
 subtreeModifiedCount
 =
 0
