Bug 1338095 - [Mortar] Implement "View bookmark" button in PDF viewer. f=lchang, f=lochang, r=evelyn
MozReview-Commit-ID: 2W0Fqy9KGuP

UltraBlame original commit: 24a43c8ae12278b79e7d0673fb9b5c824534161d

--- a/browser/extensions/mortar/host/pdf/chrome/viewer.html
+++ b/browser/extensions/mortar/host/pdf/chrome/viewer.html
@@ -968,7 +968,7 @@ span
 button
 >
 <
-a
+button
 href
 =
 "
@@ -1035,7 +1035,7 @@ span
 >
 <
 /
-a
+button
 >
 <
 div
@@ -1871,11 +1871,11 @@ span
 button
 >
 <
-a
-href
+button
+target
 =
 "
-#
+_blank
 "
 id
 =
@@ -1887,7 +1887,7 @@ class
 "
 toolbarButton
 bookmark
-hiddenSmallView
+hiddenMediumView
 "
 title
 =
@@ -1938,7 +1938,7 @@ span
 >
 <
 /
-a
+button
 >
 <
 div
