Bug 1343037 part 6.  Simplify the setup around the editor state's GetSelectionRange function.  r=ehsan
Really, there are only two cases we need to worry about.  Either
IsSelectionCached(), and then our SelectionProperties has the data we want, or
not and then we have a non-null mSelCon which has the data we want.

Since we are now using cached selection state a lot more (instead of
initializing the editor whenever someone asks for selection state), we need to
actually update it more correctly when .value is set.

And since we now update the cached selection state for the case when .value has
been set (to point to the end of the text), we need to change
HTMLInputElement::HasCachedSelection to return false for that case.  Otherwise
we will always do eager editor init on value set.  We handle that by not doing
eager init if the cached selection is collapsed.

The web platform test changes test the "update on .value set" behavior.  They
fail without this patch, pass with it.

MozReview-Commit-ID: DDU8U4MGb23

UltraBlame original commit: de068e5a963b8acbed83ac0e0b0824b4d8cbfccc

--- a/testing/web-platform/tests/html/semantics/forms/textfieldselection/selection.html
+++ b/testing/web-platform/tests/html/semantics/forms/textfieldselection/selection.html
@@ -203,6 +203,9 @@ createInputElement
 function
 (
 value
+append
+=
+true
 )
 {
 var
@@ -231,6 +234,35 @@ value
 =
 value
 ;
+el
+.
+id
+=
+"
+input
+"
++
+(
+append
+?
+"
+-
+appended
+"
+:
+"
+-
+not
+-
+appended
+"
+)
+;
+if
+(
+append
+)
+{
 body
 .
 appendChild
@@ -238,6 +270,7 @@ appendChild
 el
 )
 ;
+}
 return
 el
 ;
@@ -249,6 +282,9 @@ createTextareaElement
 function
 (
 value
+append
+=
+true
 )
 {
 var
@@ -269,6 +305,35 @@ value
 =
 value
 ;
+el
+.
+id
+=
+"
+textarea
+"
++
+(
+append
+?
+"
+-
+appended
+"
+:
+"
+-
+not
+-
+appended
+"
+)
+;
+if
+(
+append
+)
+{
 body
 .
 appendChild
@@ -276,6 +341,7 @@ appendChild
 el
 )
 ;
+}
 return
 el
 ;
@@ -687,6 +753,17 @@ textarea
 "
 )
 ;
+for
+(
+var
+append
+of
+[
+true
+false
+]
+)
+{
 test
 (
 function
@@ -699,6 +776,7 @@ el
 createInputElement
 (
 sampleText
+append
 )
 ;
 /
@@ -747,9 +825,25 @@ SelectionStart
 offset
 without
 selection
+in
 "
++
+el
+.
+id
 )
 ;
+if
+(
+!
+el
+.
+parentNode
+)
+{
+return
+;
+}
 el
 .
 select
@@ -784,9 +878,36 @@ SelectionStart
 offset
 for
 input
+that
+is
+"
++
+(
+append
+?
+"
+appended
+"
+:
+"
+not
+appended
 "
 )
+)
 ;
+}
+for
+(
+var
+append
+of
+[
+true
+false
+]
+)
+{
 test
 (
 function
@@ -799,6 +920,7 @@ el
 createTextareaElement
 (
 sampleText
+append
 )
 ;
 /
@@ -847,9 +969,25 @@ SelectionStart
 offset
 without
 selection
+in
 "
++
+el
+.
+id
 )
 ;
+if
+(
+!
+el
+.
+parentNode
+)
+{
+return
+;
+}
 el
 .
 select
@@ -884,9 +1022,36 @@ SelectionStart
 offset
 for
 textarea
+that
+is
+"
++
+(
+append
+?
+"
+appended
+"
+:
+"
+not
+appended
 "
 )
+)
 ;
+}
+for
+(
+var
+append
+of
+[
+true
+false
+]
+)
+{
 test
 (
 function
@@ -899,6 +1064,7 @@ el
 createInputElement
 (
 sampleText
+append
 )
 ;
 /
@@ -947,9 +1113,25 @@ SelectionEnd
 offset
 without
 selection
+in
 "
++
+el
+.
+id
 )
 ;
+if
+(
+!
+el
+.
+parentNode
+)
+{
+return
+;
+}
 el
 .
 select
@@ -988,9 +1170,36 @@ SelectionEnd
 offset
 for
 input
+that
+is
+"
++
+(
+append
+?
+"
+appended
+"
+:
+"
+not
+appended
 "
 )
+)
 ;
+}
+for
+(
+var
+append
+of
+[
+true
+false
+]
+)
+{
 test
 (
 function
@@ -1003,6 +1212,7 @@ el
 createTextareaElement
 (
 sampleText
+append
 )
 ;
 /
@@ -1051,9 +1261,25 @@ SelectionEnd
 offset
 without
 selection
+in
 "
++
+el
+.
+id
 )
 ;
+if
+(
+!
+el
+.
+parentNode
+)
+{
+return
+;
+}
 el
 .
 select
@@ -1092,9 +1318,25 @@ SelectionEnd
 offset
 for
 textarea
+that
+is
+"
++
+(
+append
+?
+"
+appended
+"
+:
+"
+not
+appended
 "
 )
+)
 ;
+}
 test
 (
 function
