--- a/testing/web-platform/tests/html/semantics/forms/textfieldselection/textfieldselection-setRangeText.html
+++ b/testing/web-platform/tests/html/semantics/forms/textfieldselection/textfieldselection-setRangeText.html
@@ -921,6 +921,82 @@ function
 (
 )
 {
+/
+/
+At
+this
+point
+there
+are
+already
+"
+select
+"
+events
+queued
+up
+on
+/
+/
+"
+element
+"
+.
+Give
+them
+time
+to
+fire
+;
+otherwise
+we
+can
+get
+spurious
+/
+/
+passes
+.
+/
+/
+/
+/
+This
+is
+unfortunately
+racy
+in
+that
+we
+might
+_still_
+get
+spurious
+/
+/
+passes
+.
+I
+'
+m
+not
+sure
+how
+best
+to
+handle
+that
+.
+setTimeout
+(
+this
+.
+step_func
+(
+function
+(
+)
+{
 var
 q
 =
@@ -1003,6 +1079,11 @@ foobar2
 q
 =
 true
+;
+}
+)
+10
+)
 ;
 }
 element
