--- a/testing/web-platform/tests/html/semantics/forms/textfieldselection/textfieldselection-setSelectionRange.html
+++ b/testing/web-platform/tests/html/semantics/forms/textfieldselection/textfieldselection-setSelectionRange.html
@@ -1740,6 +1740,204 @@ undefined
 '
 )
 ;
+test
+(
+function
+(
+)
+{
+input
+.
+setSelectionRange
+(
+Math
+.
+pow
+(
+2
+32
+)
+-
+2
+Math
+.
+pow
+(
+2
+32
+)
+-
+1
+)
+;
+assert_equals
+(
+input
+.
+selectionStart
+input
+.
+value
+.
+length
+"
+element
+.
+selectionStart
+should
+be
+value
+.
+length
+"
+)
+;
+assert_equals
+(
+input
+.
+selectionEnd
+input
+.
+value
+.
+length
+"
+element
+.
+selectionEnd
+should
+be
+value
+.
+length
+"
+)
+;
+}
+'
+input
+setSelectionRange
+(
+Math
+.
+pow
+(
+2
+32
+)
+-
+2
+Math
+.
+pow
+(
+2
+32
+)
+-
+1
+)
+'
+)
+;
+test
+(
+function
+(
+)
+{
+input
+.
+setSelectionRange
+(
+Math
+.
+pow
+(
+2
+31
+)
+Math
+.
+pow
+(
+2
+32
+)
+-
+1
+)
+;
+assert_equals
+(
+input
+.
+selectionStart
+input
+.
+value
+.
+length
+"
+element
+.
+selectionStart
+should
+be
+value
+.
+length
+"
+)
+;
+assert_equals
+(
+input
+.
+selectionEnd
+input
+.
+value
+.
+length
+"
+element
+.
+selectionEnd
+should
+be
+value
+.
+length
+"
+)
+;
+}
+'
+input
+setSelectionRange
+(
+Math
+.
+pow
+(
+2
+31
+)
+Math
+.
+pow
+(
+2
+32
+)
+-
+1
+)
+'
+)
+;
 }
 "
 test
@@ -3048,6 +3246,204 @@ textarea
 setSelectionRange
 (
 undefined
+1
+)
+'
+)
+;
+test
+(
+function
+(
+)
+{
+textarea
+.
+setSelectionRange
+(
+Math
+.
+pow
+(
+2
+32
+)
+-
+2
+Math
+.
+pow
+(
+2
+32
+)
+-
+1
+)
+;
+assert_equals
+(
+textarea
+.
+selectionStart
+textarea
+.
+value
+.
+length
+"
+element
+.
+selectionStart
+should
+be
+value
+.
+length
+"
+)
+;
+assert_equals
+(
+textarea
+.
+selectionEnd
+textarea
+.
+value
+.
+length
+"
+element
+.
+selectionEnd
+should
+be
+value
+.
+length
+"
+)
+;
+}
+'
+textarea
+setSelectionRange
+(
+Math
+.
+pow
+(
+2
+32
+)
+-
+2
+Math
+.
+pow
+(
+2
+32
+)
+-
+1
+)
+'
+)
+;
+test
+(
+function
+(
+)
+{
+textarea
+.
+setSelectionRange
+(
+Math
+.
+pow
+(
+2
+31
+)
+Math
+.
+pow
+(
+2
+32
+)
+-
+1
+)
+;
+assert_equals
+(
+textarea
+.
+selectionStart
+textarea
+.
+value
+.
+length
+"
+element
+.
+selectionStart
+should
+be
+value
+.
+length
+"
+)
+;
+assert_equals
+(
+textarea
+.
+selectionEnd
+textarea
+.
+value
+.
+length
+"
+element
+.
+selectionEnd
+should
+be
+value
+.
+length
+"
+)
+;
+}
+'
+textarea
+setSelectionRange
+(
+Math
+.
+pow
+(
+2
+31
+)
+Math
+.
+pow
+(
+2
+32
+)
+-
 1
 )
 '
