--- a/dom/media/test/test_seekToNextFrame.html
+++ b/dom/media/test/test_seekToNextFrame.html
@@ -292,9 +292,82 @@ callSeekToNextFrame
 =
 >
 {
+/
+/
+When
+seek
+reaches
+the
+end
+the
+promise
+is
+resolved
+before
+'
+ended
+'
+/
+/
+is
+fired
+.
+The
+resolver
+calls
+callSeekToNextFrame
+(
+)
+to
+schedule
+/
+/
+another
+seek
+and
+then
+the
+'
+ended
+'
+handler
+calls
+finish
+(
+)
+to
+shut
+/
+/
+down
+the
+MediaDecoder
+which
+will
+reject
+the
+seek
+promise
+.
+So
+we
+don
+'
+t
+/
+/
+raise
+an
+error
+in
+this
+case
+.
 ok
 (
-false
+v
+.
+finished
 "
 seekToNextFrame
 (
