Backed out changeset 19c91edc6549 (bug 1335475)
UltraBlame original commit: 577c3261adf8ed01e462b1e2c7f2e54277e42ab4

--- a/dom/plugins/test/mochitest/test_refresh_navigator_plugins.html
+++ b/dom/plugins/test/mochitest/test_refresh_navigator_plugins.html
@@ -52,13 +52,20 @@ script
 type
 =
 "
-text
+application
 /
 javascript
 "
 src
 =
 "
+chrome
+:
+/
+/
+mochikit
+/
+content
 /
 tests
 /
@@ -97,50 +104,11 @@ js
 script
 >
 <
-link
-rel
-=
-"
-stylesheet
-"
-type
-=
-"
-text
-/
-css
-"
-href
-=
-"
-/
-tests
-/
-SimpleTest
-/
-test
-.
-css
-"
->
-<
 /
 head
 >
 <
 body
->
-<
-p
-id
-=
-"
-display
-"
->
-<
-/
-p
 >
 <
 script
@@ -179,7 +147,139 @@ nsIPluginTag
 STATE_ENABLED
 )
 ;
-ok
+var
+pluginHost
+=
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+plugin
+/
+host
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIPluginHost
+)
+;
+var
+pluginTags
+=
+pluginHost
+.
+getPluginTags
+(
+)
+;
+var
+nextTest
+=
+null
+;
+var
+obsService
+=
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+observer
+-
+service
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIObserverService
+)
+;
+var
+observer
+=
+{
+observe
+:
+function
+(
+aSubject
+aTopic
+aData
+)
+{
+if
+(
+aTopic
+=
+=
+"
+plugin
+-
+info
+-
+updated
+"
+)
+{
+SimpleTest
+.
+executeSoon
+(
+nextTest
+)
+;
+}
+}
+}
+;
+obsService
+.
+addObserver
+(
+observer
+"
+plugin
+-
+info
+-
+updated
+"
+false
+)
+;
+var
+navTestPlugin1
+=
+navigator
+.
+plugins
+.
+namedItem
 (
 "
 Test
@@ -187,54 +287,173 @@ Plug
 -
 in
 "
-in
+)
+;
+ok
+(
+navTestPlugin1
+"
 navigator
 .
 plugins
-"
-testplugin
 should
-be
-present
+have
+Test
+Plug
+-
+in
+"
+)
+;
+var
+tagTestPlugin
+=
+null
+;
+for
+(
+var
+plugin
+of
+pluginTags
+)
+{
+if
+(
+plugin
+.
+name
+=
+=
+navTestPlugin1
+.
+name
+)
+{
+tagTestPlugin
+=
+plugin
+;
+break
+;
+}
+}
+ok
+(
+tagTestPlugin
+"
+plugin
+tags
+should
+have
+Test
+Plug
+-
+in
+"
+)
+;
+var
+mimeType
+=
+tagTestPlugin
+.
+getMimeTypes
+(
+)
+[
+0
+]
+;
+ok
+(
+mimeType
+"
+should
+have
+a
+MIME
+type
+for
+Test
+Plug
+-
+in
 "
 )
 ;
 ok
 (
-"
-application
-/
-x
--
-test
-"
-in
 navigator
 .
 mimeTypes
+[
+mimeType
+]
 "
-testplugin
-MIME
+navigator
+.
+mimeTypes
 should
-be
-present
+have
+an
+entry
+for
+'
+"
++
+mimeType
++
+"
+'
 "
 )
 ;
-setTestPluginEnabledState
+ok
 (
-SpecialPowers
+!
+tagTestPlugin
 .
-Ci
+disabled
+"
+test
+plugin
+should
+not
+be
+disabled
+"
+)
+;
+nextTest
+=
+testPart2
+;
+tagTestPlugin
+.
+enabledState
+=
+Components
+.
+interfaces
 .
 nsIPluginTag
 .
 STATE_DISABLED
-)
 ;
-ok
+function
+testPart2
 (
-!
+)
+{
+var
+navTestPlugin2
+=
+navigator
+.
+plugins
+.
+namedItem
 (
 "
 Test
@@ -242,58 +461,87 @@ Plug
 -
 in
 "
-in
+)
+;
+ok
+(
+!
+navTestPlugin2
+"
+now
 navigator
 .
 plugins
-)
-"
-testplugin
 should
 not
-be
-present
+have
+Test
+Plug
+-
+in
 "
 )
 ;
 ok
 (
 !
-(
-"
-application
-/
-x
--
-test
-"
-in
 navigator
 .
 mimeTypes
-)
+[
+mimeType
+]
 "
-testplugin
-MIME
+now
+navigator
+.
+mimeTypes
 should
 not
-be
-present
+have
+an
+entry
+for
+'
+"
++
+mimeType
++
+"
+'
 "
 )
 ;
-setTestPluginEnabledState
-(
-SpecialPowers
+nextTest
+=
+testPart3
+;
+tagTestPlugin
 .
-Ci
+enabledState
+=
+Components
+.
+interfaces
 .
 nsIPluginTag
 .
 STATE_ENABLED
-)
 ;
-ok
+}
+function
+testPart3
+(
+)
+{
+var
+navTestPlugin3
+=
+navigator
+.
+plugins
+.
+namedItem
 (
 "
 Test
@@ -301,39 +549,66 @@ Plug
 -
 in
 "
-in
+)
+;
+ok
+(
+navTestPlugin3
+"
+now
 navigator
 .
 plugins
-"
-testplugin
 should
-be
-present
+have
+Test
+Plug
+-
+in
 again
 "
 )
 ;
 ok
 (
-"
-application
-/
-x
--
-test
-"
-in
 navigator
 .
 mimeTypes
+[
+mimeType
+]
 "
-testplugin
-MIME
+now
+navigator
+.
+mimeTypes
 should
-be
-present
+have
+an
+entry
+for
+'
+"
++
+mimeType
++
+"
+'
 again
+"
+)
+;
+obsService
+.
+removeObserver
+(
+observer
+"
+plugin
+-
+info
+-
+updated
 "
 )
 ;
@@ -343,6 +618,7 @@ finish
 (
 )
 ;
+}
 <
 /
 script
