Bug 1345403 part 3 - Test element becomes tainted by DrawImage; r=jwwang,smaug
MozReview-Commit-ID: 9Txz4FbFtPe

UltraBlame original commit: a3e4ce12194fd5212e7daf3225c8254845f910ca

--- a/dom/media/test/test_background_video_tainted_by_drawimage.html
+++ b/dom/media/test/test_background_video_tainted_by_drawimage.html
@@ -19,7 +19,10 @@ title
 Test
 Background
 Video
-Suspends
+Is
+Tainted
+By
+drawImage
 <
 /
 title
@@ -113,54 +116,99 @@ manager
 new
 MediaTestManager
 ;
-var
-MIN_DELAY
-=
-100
-;
 function
-testDelay
+drawVideoToCanvas
 (
 v
-start
-min
 )
 {
 let
-end
+w
 =
-performance
+v
 .
-now
+width
+h
+=
+v
+.
+height
+c
+=
+document
+.
+createElement
 (
+'
+canvas
+'
+)
+;
+c
+.
+width
+=
+w
+;
+c
+.
+height
+=
+h
+;
+document
+.
+body
+.
+appendChild
+(
+c
 )
 ;
 let
-delay
+gfx
 =
-end
--
-start
-;
-ok
-(
-delay
->
-min
-{
-v
+c
 .
-token
-}
-suspended
-with
-a
-delay
-of
+getContext
+(
+'
+2d
+'
+)
+;
+if
+(
+!
+gfx
+)
 {
-delay
+throw
+Error
+(
+"
+Unable
+to
+obtain
+context
+'
+2d
+'
+from
+canvas
+"
+)
+;
 }
-ms
+gfx
+.
+drawImage
+(
+v
+0
+0
+w
+h
 )
 ;
 }
@@ -173,7 +221,10 @@ desc
 Test
 Background
 Video
-Suspends
+Is
+Tainted
+By
+drawImage
 '
 prefs
 :
@@ -204,25 +255,6 @@ enabled
 "
 true
 ]
-/
-/
-User
-a
-short
-delay
-to
-ensure
-video
-decode
-suspend
-happens
-before
-end
-/
-/
-of
-video
-.
 [
 "
 media
@@ -237,7 +269,7 @@ delay
 -
 ms
 "
-MIN_DELAY
+1000
 ]
 ]
 tests
@@ -252,6 +284,16 @@ token
 =
 >
 {
+ok
+(
+true
+{
+test
+.
+name
+}
+)
+;
 let
 v
 =
@@ -270,9 +312,6 @@ started
 token
 )
 ;
-let
-start
-;
 waitUntilPlaying
 (
 v
@@ -285,45 +324,31 @@ then
 =
 >
 {
-start
-=
-performance
-.
-now
+drawVideoToCanvas
 (
+v
 )
 ;
-}
-)
-.
-then
-(
-(
-)
-=
->
-testVideoSuspendsWhenHidden
+ok
 (
 v
-)
-)
 .
-then
-(
+hasSuspendTaint
 (
 )
-=
->
-{
-testDelay
-(
-v
-start
-MIN_DELAY
+"
+Video
+is
+tainted
+after
+drawing
+to
+canvas
+"
 )
 ;
 return
-testVideoResumesWhenShown
+checkVideoDoesntSuspend
 (
 v
 )
@@ -337,22 +362,52 @@ then
 )
 =
 >
-waitUntilEnded
+{
+ok
 (
-v
+true
+'
+Video
+ended
+before
+decode
+was
+suspended
+'
 )
+;
+manager
+.
+finished
+(
+token
+)
+;
+}
 )
 .
-then
+catch
 (
 (
+e
 )
 =
 >
 {
-removeNodeAndSource
+ok
 (
-v
+false
+'
+Test
+failed
+:
+'
++
+e
+.
+toString
+(
+)
 )
 ;
 manager
