Bug 1346402 - Update pdf.js to version 1.7.359. r=bdahl
UltraBlame original commit: 8d46a3630226b686569a92c0b4681c65d3bd053a

--- a/browser/extensions/pdfjs/content/web/viewer.html
+++ b/browser/extensions/pdfjs/content/web/viewer.html
@@ -383,7 +383,6 @@ class
 =
 "
 toolbarButton
-group
 toggled
 "
 title
@@ -439,7 +438,6 @@ class
 =
 "
 toolbarButton
-group
 "
 title
 =
@@ -507,7 +505,6 @@ class
 =
 "
 toolbarButton
-group
 "
 title
 =
@@ -645,7 +642,6 @@ class
 findbar
 hidden
 doorHanger
-hiddenSmallView
 "
 id
 =
@@ -654,32 +650,12 @@ findbar
 "
 >
 <
-label
-for
-=
-"
-findInput
-"
-class
-=
-"
-toolbarLabel
-"
-data
--
-l10n
--
+div
 id
 =
 "
-find_label
+findbarInputContainer
 "
->
-Find
-:
-<
-/
-label
 >
 <
 input
@@ -693,10 +669,31 @@ class
 "
 toolbarField
 "
+title
+=
+"
+Find
+"
+placeholder
+=
+"
+Find
+in
+document
+"
 tabindex
 =
 "
 91
+"
+data
+-
+l10n
+-
+id
+=
+"
+find_input
 "
 >
 <
@@ -830,6 +827,18 @@ button
 div
 >
 <
+/
+div
+>
+<
+div
+id
+=
+"
+findbarOptionsContainer
+"
+>
+<
 input
 type
 =
@@ -950,6 +959,18 @@ hidden
 span
 >
 <
+/
+div
+>
+<
+div
+id
+=
+"
+findbarMessageContainer
+"
+>
+<
 span
 id
 =
@@ -965,6 +986,10 @@ toolbarLabel
 <
 /
 span
+>
+<
+/
+div
 >
 <
 /
@@ -1817,8 +1842,6 @@ class
 =
 "
 toolbarButton
-group
-hiddenSmallView
 "
 title
 =
@@ -1869,6 +1892,7 @@ class
 =
 "
 splitToolbarButton
+hiddenSmallView
 "
 >
 <
