Bug 1345996.  Change event handler invocation to only do the "true return cancels" for onerror handlers handed ErrorEvents, and only on globals.  r=smaug
See https://github.com/whatwg/html/issues/2296 and
https://github.com/whatwg/html/issues/423 for details on what various browsers
do and whatnot.

MozReview-Commit-ID: DytkZreHudx

UltraBlame original commit: 83b01c14f1f33c2c972ba24b41d0933aac840d23

--- a/testing/web-platform/tests/html/webappapis/scripting/events/event-handler-processing-algorithm.html
+++ b/testing/web-platform/tests/html/webappapis/scripting/events/event-handler-processing-algorithm.html
@@ -83,7 +83,39 @@ div
 <
 script
 >
-async_test
+/
+/
+Historically
+mouseover
+was
+special
+in
+the
+spec
+but
+now
+it
+is
+not
+.
+See
+https
+:
+/
+/
+github
+.
+com
+/
+whatwg
+/
+html
+/
+pull
+/
+2398
+.
+test
 (
 function
 (
@@ -126,7 +158,7 @@ function
 )
 {
 return
-true
+false
 }
 )
 ;
@@ -151,24 +183,105 @@ ev
 defaultPrevented
 true
 )
-t
-.
-done
-(
-)
-;
 }
 "
 mouseover
 listener
 returning
-true
+false
 cancels
 event
+(
+using
+Event
+)
 "
 )
 ;
-async_test
+test
+(
+function
+(
+t
+)
+{
+var
+ev
+=
+new
+MouseEvent
+(
+'
+mouseover
+'
+{
+cancelable
+:
+true
+}
+)
+;
+document
+.
+getElementById
+(
+"
+foo
+"
+)
+.
+onmouseover
+=
+t
+.
+step_func
+(
+function
+(
+)
+{
+return
+false
+}
+)
+;
+document
+.
+getElementById
+(
+"
+foo
+"
+)
+.
+dispatchEvent
+(
+ev
+)
+;
+assert_equals
+(
+ev
+.
+defaultPrevented
+true
+)
+}
+"
+mouseover
+listener
+returning
+false
+cancels
+event
+(
+using
+MouseEvent
+)
+"
+)
+;
+test
 (
 function
 (
@@ -211,8 +324,7 @@ function
 )
 {
 return
-false
-;
+true
 }
 )
 ;
@@ -237,24 +349,107 @@ ev
 defaultPrevented
 false
 )
-;
-t
-.
-done
-(
-)
-;
 }
 "
 mouseover
 listener
 returning
-false
+true
 doesn
 '
 t
 cancel
 event
+(
+using
+Event
+)
+"
+)
+;
+test
+(
+function
+(
+t
+)
+{
+var
+ev
+=
+new
+MouseEvent
+(
+'
+mouseover
+'
+{
+cancelable
+:
+true
+}
+)
+;
+document
+.
+getElementById
+(
+"
+foo
+"
+)
+.
+onmouseover
+=
+t
+.
+step_func
+(
+function
+(
+)
+{
+return
+true
+}
+)
+;
+document
+.
+getElementById
+(
+"
+foo
+"
+)
+.
+dispatchEvent
+(
+ev
+)
+;
+assert_equals
+(
+ev
+.
+defaultPrevented
+false
+)
+}
+"
+mouseover
+listener
+returning
+true
+doesn
+'
+t
+cancel
+event
+(
+using
+MouseEvent
+)
 "
 )
 ;
@@ -283,7 +478,7 @@ beforeunload
 canceling
 .
 html
-async_test
+test
 (
 function
 (
@@ -353,12 +548,6 @@ defaultPrevented
 true
 )
 ;
-t
-.
-done
-(
-)
-;
 }
 "
 click
@@ -370,7 +559,7 @@ event
 "
 )
 ;
-async_test
+test
 (
 function
 (
@@ -440,12 +629,6 @@ defaultPrevented
 true
 )
 ;
-t
-.
-done
-(
-)
-;
 }
 "
 blur
@@ -457,7 +640,7 @@ event
 "
 )
 ;
-async_test
+test
 (
 function
 (
@@ -525,12 +708,6 @@ ev
 .
 defaultPrevented
 true
-)
-;
-t
-.
-done
-(
 )
 ;
 }
