Bug 1345996 followup.  Update some tests for the new event behavior.
MozReview-Commit-ID: 1OAR6YcoiF3

UltraBlame original commit: 92fcd93e1d500af1646a5a1cc4cbf45aea5b0a8e

--- a/dom/events/test/test_bug517851.html
+++ b/dom/events/test/test_bug517851.html
@@ -283,6 +283,32 @@ testReturnValue
 "
 )
 ;
+target2
+.
+setAttribute
+(
+"
+onerror
+"
+"
++
++
+window
+.
+parent
+.
+handledCount
+;
+return
+window
+.
+parent
+.
+testReturnValue
+;
+"
+)
+;
 target
 .
 setAttribute
@@ -383,7 +409,123 @@ document
 createEvent
 (
 "
-Event
+ErrorEvent
+"
+)
+;
+e
+.
+initEvent
+(
+"
+error
+"
+true
+true
+)
+;
+window
+.
+testReturnValue
+=
+true
+;
+is
+(
+target
+.
+dispatchEvent
+(
+e
+)
+window
+.
+testReturnValue
+"
+error
+event
+should
+not
+have
+reverse
+return
+value
+handling
+on
+div
+!
+"
+)
+;
+is
+(
+handledCount
+1
+"
+Wrong
+event
+count
+!
+"
+)
+;
+window
+.
+testReturnValue
+=
+false
+;
+is
+(
+target
+.
+dispatchEvent
+(
+e
+)
+window
+.
+testReturnValue
+"
+error
+event
+should
+not
+have
+reverse
+return
+value
+handling
+on
+div
+(
+2
+)
+!
+"
+)
+;
+is
+(
+handledCount
+2
+"
+Wrong
+event
+count
+!
+"
+)
+;
+var
+e
+=
+document
+.
+createEvent
+(
+"
+ErrorEvent
 "
 )
 ;
@@ -406,7 +548,7 @@ false
 ;
 is
 (
-target
+target2
 .
 dispatchEvent
 (
@@ -432,7 +574,7 @@ handling
 is
 (
 handledCount
-1
+3
 "
 Wrong
 event
@@ -449,7 +591,7 @@ true
 ;
 is
 (
-target
+target2
 .
 dispatchEvent
 (
@@ -478,7 +620,7 @@ handling
 is
 (
 handledCount
-2
+4
 "
 Wrong
 event
@@ -513,7 +655,7 @@ window
 .
 testReturnValue
 =
-false
+true
 ;
 is
 (
@@ -523,7 +665,6 @@ dispatchEvent
 (
 e
 )
-!
 window
 .
 testReturnValue
@@ -531,6 +672,7 @@ testReturnValue
 mouseover
 event
 should
+not
 have
 reverse
 return
@@ -543,7 +685,7 @@ handling
 is
 (
 handledCount
-3
+5
 "
 Wrong
 event
@@ -556,7 +698,7 @@ window
 .
 testReturnValue
 =
-true
+false
 ;
 is
 (
@@ -566,7 +708,6 @@ dispatchEvent
 (
 e
 )
-!
 window
 .
 testReturnValue
@@ -574,6 +715,7 @@ testReturnValue
 mouseover
 event
 should
+not
 have
 reverse
 return
@@ -589,7 +731,7 @@ handling
 is
 (
 handledCount
-4
+6
 "
 Wrong
 event
@@ -652,7 +794,7 @@ prevented
 is
 (
 handledCount
-4
+6
 "
 Wrong
 event
@@ -689,7 +831,7 @@ prevented
 is
 (
 handledCount
-5
+7
 "
 Wrong
 event
@@ -735,7 +877,7 @@ cancelled
 is
 (
 handledCount
-5
+7
 "
 Wrong
 event
@@ -810,7 +952,7 @@ prevented
 is
 (
 handledCount
-5
+7
 "
 Wrong
 event
@@ -853,7 +995,7 @@ prevented
 is
 (
 handledCount
-6
+8
 "
 Wrong
 event
@@ -925,7 +1067,7 @@ prevented
 is
 (
 handledCount
-6
+8
 "
 Wrong
 event
@@ -970,7 +1112,7 @@ prevented
 is
 (
 handledCount
-7
+9
 "
 Wrong
 event
@@ -1036,7 +1178,7 @@ handling
 is
 (
 handledCount
-8
+10
 "
 Wrong
 event
@@ -1083,7 +1225,7 @@ handling
 is
 (
 handledCount
-9
+11
 "
 Wrong
 event
