--- a/dom/events/test/test_bug985988.html
+++ b/dom/events/test/test_bug985988.html
@@ -253,22 +253,11 @@ handling
 "
 )
 ;
-/
-/
-mouseover
-has
-reversed
-meaning
-for
-handler
-return
-value
-.
 t
 .
 onmouseover
 =
-reversedHandler
+handler
 ;
 e
 =
@@ -311,7 +300,7 @@ t
 .
 onmouseover
 =
-handler
+reversedHandler
 ;
 e
 =
@@ -356,6 +345,114 @@ handling
 /
 /
 error
+does
+not
+have
+reversed
+meaning
+for
+handler
+return
+value
+on
+/
+/
+non
+-
+globals
+.
+t
+.
+onerror
+=
+handler
+;
+e
+=
+new
+ErrorEvent
+(
+"
+error
+"
+{
+cancelable
+:
+true
+}
+)
+;
+t
+.
+dispatchEvent
+(
+e
+)
+;
+ok
+(
+e
+.
+defaultPrevented
+"
+Should
+have
+prevented
+default
+handling
+.
+"
+)
+;
+t
+.
+onerror
+=
+reversedHandler
+;
+e
+=
+new
+ErrorEvent
+(
+"
+error
+"
+{
+cancelable
+:
+true
+}
+)
+;
+t
+.
+dispatchEvent
+(
+e
+)
+;
+ok
+(
+!
+e
+.
+defaultPrevented
+"
+Shouldn
+'
+t
+have
+prevented
+default
+handling
+.
+"
+)
+;
+/
+/
+error
 has
 reversed
 meaning
@@ -363,7 +460,22 @@ for
 handler
 return
 value
+on
+globals
 .
+t
+=
+document
+.
+getElementById
+(
+"
+testtarget2
+"
+)
+.
+contentWindow
+;
 t
 .
 onerror
@@ -416,7 +528,7 @@ handler
 e
 =
 new
-MouseEvent
+ErrorEvent
 (
 "
 error
@@ -574,6 +686,18 @@ target
 <
 /
 a
+>
+<
+iframe
+id
+=
+"
+testtarget2
+"
+>
+<
+/
+iframe
 >
 <
 pre
