Bug 1337963 - Coalesce wheel events in the content process so that long wheel event handlers don't hang the content process. r=smaug
UltraBlame original commit: 1b47b363a447fbe4906b4ba71369d1c6f8c32795

--- a/dom/events/test/test_bug574663.html
+++ b/dom/events/test/test_bug574663.html
@@ -457,6 +457,16 @@ postApzFlush
 ;
 }
 }
+var
+kExtraEvents
+=
+5
+;
+var
+kDelta
+=
+3
+;
 function
 sendTouchpadScrollMotion
 (
@@ -489,7 +499,7 @@ deltaY
 :
 direction
 *
-3
+kDelta
 lineOrPageDeltaY
 :
 direction
@@ -502,12 +512,12 @@ momentum
 }
 ;
 let
-kExtraEvents
-=
-5
-;
-var
 received
+=
+0
+;
+let
+deltaY
 =
 0
 ;
@@ -516,8 +526,16 @@ onwheel
 =
 function
 (
+e
 )
 {
+deltaY
++
+=
+e
+.
+deltaY
+;
 if
 (
 +
@@ -525,9 +543,7 @@ if
 received
 =
 =
-1
-+
-kExtraEvents
+2
 )
 {
 /
@@ -895,12 +911,20 @@ zoom
 postfix
 )
 ;
-isnot
+is
 (
 scrollbox
 .
 scrollTop
 scrollTopBefore
++
+kDelta
+*
+(
+kExtraEvents
++
+1
+)
 "
 Normal
 scrolling
@@ -989,12 +1013,20 @@ Ctrl
 "
 )
 ;
-isnot
+is
 (
 scrollbox
 .
 scrollTop
 scrollTopBefore
++
+kDelta
+*
+(
+kExtraEvents
++
+1
+)
 "
 Momentum
 scrolling
