Bug 1323158 - Part 4: Refine PE boundary events related testcases since boundary events are fired after capturing or releasing the pointer. r=smaug
UltraBlame original commit: de1f28ab01a172a139b1e5534f1d1b162e5cc8d2

--- a/dom/events/test/pointerevents/test_bug1285128.html
+++ b/dom/events/test/pointerevents/test_bug1285128.html
@@ -201,15 +201,42 @@ style
 "
 width
 :
-200px
+50px
 ;
 height
 :
-200px
+50px
 ;
 background
 :
 green
+"
+>
+<
+/
+div
+>
+<
+div
+id
+=
+"
+target1
+"
+style
+=
+"
+width
+:
+50px
+;
+height
+:
+50px
+;
+background
+:
+red
 "
 >
 <
@@ -336,12 +363,12 @@ true
 }
 )
 ;
-target0
+target1
 .
 addEventListener
 (
 "
-mouseenter
+mouseup
 "
 (
 )
@@ -394,6 +421,30 @@ MOZ_SOURCE_MOUSE
 isWidgetEventSynthesized
 :
 true
+}
+)
+;
+synthesizeMouseAtCenter
+(
+target1
+{
+type
+:
+"
+mousedown
+"
+}
+)
+;
+synthesizeMouseAtCenter
+(
+target1
+{
+type
+:
+"
+mouseup
+"
 }
 )
 ;
