--- a/dom/events/test/pointerevents/test_pointerevent_setpointercapture_relatedtarget-manual.html
+++ b/dom/events/test/pointerevents/test_pointerevent_setpointercapture_relatedtarget-manual.html
@@ -235,7 +235,7 @@ sendMouseEvent
 (
 int_win
 "
-target1
+btnCapture
 "
 "
 mousemove
@@ -246,7 +246,7 @@ sendMouseEvent
 (
 int_win
 "
-target1
+btnCapture
 "
 "
 mouseup
