Bug 1323158 - Part 5: Update test_pointerevent_releasepointercapture_events_to_original_target-manual.html. r=smaug
UltraBlame original commit: 01ffdf50f96f1ff3df1e70ec3f696a1597cd04e2

--- a/dom/events/test/pointerevents/pointerevent_releasepointercapture_events_to_original_target-manual.html
+++ b/dom/events/test/pointerevents/pointerevent_releasepointercapture_events_to_original_target-manual.html
@@ -226,79 +226,18 @@ javascript
 "
 >
 var
+test_pointerEvent
+;
+var
 detected_pointertypes
 =
 {
 }
 ;
 var
-test_pointerEvent
-=
-async_test
-(
-"
-lostpointercapture
-:
-subsequent
-events
-to
-target
-.
-"
-)
-;
-/
-/
-set
-up
-test
-harness
-/
-/
-showPointerTypes
-is
-defined
-in
-pointerevent_support
-.
-js
-/
-/
-Requirements
-:
-the
-callback
-function
-will
-reference
-the
-test_pointerEvent
-object
-and
-/
-/
-will
-fail
-unless
-the
-async_test
-is
-created
-with
-the
-var
-name
-"
-test_pointerEvent
-"
-.
-add_completion_callback
-(
-showPointerTypes
-)
-;
-var
 captured_event
+=
+null
 ;
 var
 test_done
@@ -325,6 +264,36 @@ f_lostPointerCapture
 =
 false
 ;
+function
+resetTestState
+(
+)
+{
+captured_event
+=
+null
+;
+test_done
+=
+false
+;
+overEnterEventsFail
+=
+false
+;
+outLeaveEventsFail
+=
+false
+;
+f_gotPointerCapture
+=
+false
+;
+f_lostPointerCapture
+=
+false
+;
+}
 function
 listenerEventHandler
 (
@@ -420,6 +389,9 @@ pointerenter
 {
 if
 (
+captured_event
+&
+&
 !
 overEnterEventsFail
 )
@@ -430,7 +402,7 @@ function
 (
 )
 {
-assert_true
+assert_false
 (
 f_gotPointerCapture
 "
@@ -438,18 +410,16 @@ pointerover
 /
 enter
 should
-not
 be
 received
-when
+before
 the
 target
-doesn
-'
-t
-have
-capture
-and
+receives
+gotpointercapture
+even
+when
+the
 pointer
 is
 not
@@ -460,23 +430,23 @@ it
 )
 ;
 }
+expectedPointerType
++
 "
 pointerover
 /
 enter
 should
-not
 be
 received
-when
+before
 the
 target
-doesn
-'
-t
-have
-capture
-and
+receives
+gotpointercapture
+even
+when
+the
 pointer
 is
 not
@@ -550,6 +520,8 @@ capture
 )
 ;
 }
+expectedPointerType
++
 "
 pointerout
 /
@@ -673,6 +645,8 @@ handler
 )
 ;
 }
+expectedPointerType
++
 "
 No
 other
@@ -768,6 +742,8 @@ type
 )
 ;
 }
+expectedPointerType
++
 "
 The
 target
@@ -873,6 +849,10 @@ pointerup
 "
 )
 {
+test_done
+=
+true
+;
 test_pointerEvent
 .
 done
@@ -883,10 +863,6 @@ done
 /
 complete
 test
-test_done
-=
-true
-;
 }
 }
 }
@@ -895,6 +871,30 @@ run
 (
 )
 {
+test_pointerEvent
+=
+setup_pointerevent_test
+(
+"
+got
+/
+lost
+pointercapture
+:
+subsequent
+events
+to
+target
+"
+ALL_POINTERS
+)
+;
+/
+/
+set
+up
+test
+harness
 var
 listener
 =
@@ -1000,6 +1000,18 @@ run
 "
 >
 <
+h2
+id
+=
+"
+pointerTypeDescription
+"
+>
+<
+/
+h2
+>
+<
 div
 id
 =
@@ -1038,6 +1050,28 @@ h4
 Test
 Description
 :
+Use
+your
+pointer
+and
+press
+down
+in
+the
+black
+box
+.
+Then
+move
+around
+in
+the
+box
+and
+release
+your
+pointer
+.
 After
 invoking
 the
@@ -1063,6 +1097,7 @@ determining
 the
 event
 target
+.
 <
 /
 h4
@@ -1079,18 +1114,6 @@ id
 target0
 "
 >
-Use
-mouse
-touch
-or
-pen
-to
-contact
-here
-and
-move
-around
-.
 <
 /
 div
