--- a/dom/events/test/pointerevents/test_pointerevent_releasepointercapture_events_to_original_target-manual.html
+++ b/dom/events/test/pointerevents/test_pointerevent_releasepointercapture_events_to_original_target-manual.html
@@ -209,6 +209,116 @@ executeTest
 int_win
 )
 {
+/
+/
+Synthesize
+mouse
+events
+to
+run
+this
+test
+.
+sendMouseEvent
+(
+int_win
+"
+target0
+"
+"
+mousemove
+"
+)
+;
+sendMouseEvent
+(
+int_win
+"
+target0
+"
+"
+mousedown
+"
+)
+;
+sendMouseEvent
+(
+int_win
+"
+target0
+"
+"
+mousemove
+"
+{
+buttons
+:
+1
+}
+)
+;
+sendMouseEvent
+(
+int_win
+"
+target0
+"
+"
+mousemove
+"
+{
+buttons
+:
+1
+}
+)
+;
+sendMouseEvent
+(
+int_win
+"
+target0
+"
+"
+mouseup
+"
+)
+;
+window
+.
+addEventListener
+(
+"
+message
+"
+function
+(
+aEvent
+)
+{
+if
+(
+aEvent
+.
+data
+=
+=
+"
+Test
+Touch
+"
+)
+{
+/
+/
+Synthesize
+touch
+events
+to
+run
+this
+test
+.
 sendTouchEvent
 (
 int_win
@@ -239,6 +349,157 @@ target0
 "
 "
 touchend
+"
+)
+;
+window
+.
+postMessage
+(
+"
+Test
+Pen
+"
+"
+*
+"
+)
+;
+}
+else
+if
+(
+aEvent
+.
+data
+=
+=
+"
+Test
+Pen
+"
+)
+{
+/
+/
+Synthesize
+pen
+events
+to
+run
+this
+test
+.
+sendMouseEvent
+(
+int_win
+"
+target0
+"
+"
+mousemove
+"
+{
+inputSource
+:
+MouseEvent
+.
+MOZ_SOURCE_PEN
+}
+)
+;
+sendMouseEvent
+(
+int_win
+"
+target0
+"
+"
+mousedown
+"
+{
+inputSource
+:
+MouseEvent
+.
+MOZ_SOURCE_PEN
+}
+)
+;
+sendMouseEvent
+(
+int_win
+"
+target0
+"
+"
+mousemove
+"
+{
+inputSource
+:
+MouseEvent
+.
+MOZ_SOURCE_PEN
+buttons
+:
+1
+}
+)
+;
+sendMouseEvent
+(
+int_win
+"
+target0
+"
+"
+mousemove
+"
+{
+inputSource
+:
+MouseEvent
+.
+MOZ_SOURCE_PEN
+buttons
+:
+1
+}
+)
+;
+sendMouseEvent
+(
+int_win
+"
+target0
+"
+"
+mouseup
+"
+{
+inputSource
+:
+MouseEvent
+.
+MOZ_SOURCE_PEN
+}
+)
+;
+}
+}
+)
+;
+window
+.
+postMessage
+(
+"
+Test
+Touch
+"
+"
+*
 "
 )
 ;
